Fix logo tezt size on mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
 body{
     background-color: rgb(246, 217, 253);
 }
+
+nav .brand-logo{
+    font-size: 1.5rem;
+}
